examples/test/testpolicy6084.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6084
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key47: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value23
          key13: value49
          key34: value22
      podSelector:
        matchLabels:
          key39: value21
          key12: value20
          key33: value49
